--- a/src/app/accounting/provisioning-entries/create-provisioning-entry/create-provisioning-entry.component.html
+++ b/src/app/accounting/provisioning-entries/create-provisioning-entry/create-provisioning-entry.component.html
@@ -9,18 +9,18 @@
         <div fxLayout="column">
 
           <mat-form-field fxFlex>
-            <mat-label>Date</mat-label>
+            <mat-label> {{ "Accounting.ProvisioningEntriesComponent.CreateProvisioningEntryComponent.date" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="datePicker" required formControlName="date">
             <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
             <mat-datepicker #datePicker></mat-datepicker>
             <mat-error *ngIf="provisioningEntryForm.controls.date.hasError('required')">
-              Date is <strong>required</strong>
+              {{ "Accounting.ProvisioningEntriesComponent.CreateProvisioningEntryComponent.errdate" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div fxFlex>
             <mat-checkbox labelPosition="before" formControlName="createjournalentries">
-              Create Journal Entries
+              {{ "Accounting.ProvisioningEntriesComponent.CreateProvisioningEntryComponent.createjournalentries" | translate }}
             </mat-checkbox>
           </div>
 
@@ -29,8 +29,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!provisioningEntryForm.valid" *midasHasPermission="'CREATE_PROVISIONING_ENTRIES'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!provisioningEntryForm.valid" *midasHasPermission="'CREATE_PROVISIONING_ENTRIES'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
