--- a/src/app/accounting/accounting-rules/create-rule/create-rule.component.html
+++ b/src/app/accounting/accounting-rules/create-rule/create-rule.component.html
@@ -9,35 +9,35 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Accounting Rule Name</mat-label>
+            <mat-label>{{ "Accounting.Rules.CreateRuleComponent.name" | translate }}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="accountingRuleForm.controls.name.hasError('required')">
-              Accounting Rule Name is <strong>required</strong>
+              {{ "Accounting.Rules.CreateRuleComponent.errname" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{ "Accounting.Rules.CreateRuleComponent.officeId" | translate }}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeData" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="accountingRuleForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+              {{ "Accounting.Rules.CreateRuleComponent.errofficeId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div fxFlex="48%" fxLayout="row" fxLayout.lt-md="column" class="rule-wrapper">
-            <mat-label fxFlex="50%">Affected GL Entry (Debit) Rule Type *</mat-label>
+            <mat-label fxFlex="50%">{{ "Accounting.Rules.CreateRuleComponent.affectedGlEntry" | translate }}</mat-label>
             <mat-radio-group fxFlex="50%" fxLayout="row" fxLayoutGap="5%" formControlName="debitRuleType">
-              <mat-radio-button value="fixedAccount">Fixed Account</mat-radio-button>
-              <mat-radio-button value="listOfAccounts">List of Accounts</mat-radio-button>
+              <mat-radio-button value="fixedAccount">{{ "Accounting.Rules.CreateRuleComponent.fixedAccount" | translate }}</mat-radio-button>
+              <mat-radio-button value="listOfAccounts">{{ "Accounting.Rules.CreateRuleComponent.listOfAccounts" | translate }}</mat-radio-button>
             </mat-radio-group>
           </div>
 
           <mat-form-field fxFlex="48%" *ngIf="accountingRuleForm.controls.debitRuleType.value === 'fixedAccount'">
-            <mat-label>Account to Debit</mat-label>
+            <mat-label>{{ "Accounting.Rules.CreateRuleComponent.accountToDebit" | translate }}</mat-label>
             <mat-select formControlName="accountToDebit">
               <mat-option *ngFor="let glAccount of glAccountData" [value]="glAccount.id">
                 {{ glAccount.name }}
@@ -47,7 +47,7 @@
 
           <div fxFlex="48%" fxLayout="row" fxLayoutGap="2%" fxLayout.lt-md="column" *ngIf="accountingRuleForm.controls.debitRuleType.value === 'listOfAccounts'">
             <mat-form-field fxFlex="50%">
-              <mat-label>Debit Tags</mat-label>
+              <mat-label>{{ "Accounting.Rules.CreateRuleComponent.debitTags" | translate }}</mat-label>
               <mat-select formControlName="debitTags" multiple>
                 <mat-option *ngFor="let debitTag of debitTagData" [value]="debitTag.id">
                   {{ debitTag.name }}
@@ -63,15 +63,15 @@
           </div>
 
           <div fxFlex="48%" fxLayout="row" fxLayout.lt-md="column" class="rule-wrapper">
-            <mat-label fxFlex="50%">Affected GL Entry (Credit) Rule Type *</mat-label>
+            <mat-label fxFlex="50%">{{ "Accounting.Rules.CreateRuleComponent.creditRuleType" | translate }}</mat-label>
             <mat-radio-group fxFlex="50%" fxLayout="row" fxLayoutGap="5%" formControlName="creditRuleType">
-              <mat-radio-button value="fixedAccount">Fixed Account</mat-radio-button>
-              <mat-radio-button value="listOfAccounts">List of Accounts</mat-radio-button>
+              <mat-radio-button value="fixedAccount">{{ "Accounting.Rules.CreateRuleComponent.fixedAccount" | translate }}</mat-radio-button>
+              <mat-radio-button value="listOfAccounts">{{ "Accounting.Rules.CreateRuleComponent.listOfAccounts" | translate }}</mat-radio-button>
             </mat-radio-group>
           </div>
 
           <mat-form-field fxFlex="48%" *ngIf="accountingRuleForm.controls.creditRuleType.value === 'fixedAccount'">
-            <mat-label>Account to Credit</mat-label>
+            <mat-label>{{ "Accounting.Rules.CreateRuleComponent.accountToCredit" | translate }}</mat-label>
             <mat-select formControlName="accountToCredit">
               <mat-option *ngFor="let glAccount of glAccountData" [value]="glAccount.id">
                 {{ glAccount.name }}
@@ -81,7 +81,7 @@
 
           <div fxFlex="48%" fxLayout="row" fxLayoutGap="2%" fxLayout.lt-md="column" *ngIf="accountingRuleForm.controls.creditRuleType.value === 'listOfAccounts'">
             <mat-form-field fxFlex="50%">
-              <mat-label>Credit Tags</mat-label>
+              <mat-label>{{ "Accounting.Rules.CreateRuleComponent.creditTags" | translate }}</mat-label>
               <mat-select formControlName="creditTags" multiple>
                 <mat-option *ngFor="let creditTag of creditTagData" [value]="creditTag.id">
                   {{ creditTag.name }}
@@ -91,13 +91,13 @@
 
             <div fxFlex="50%" ngClass.gt-md="entries-wrapper">
               <mat-checkbox labelPosition="before" formControlName="allowMultipleCreditEntries" class="entries">
-                Multiple Credit Entries Allowed
+                {{ "Accounting.Rules.CreateRuleComponent.allowMultipleCreditEntries" | translate }}
               </mat-checkbox>
             </div>
           </div>
 
           <mat-form-field fxFlex="98%">
-            <mat-label>Description</mat-label>
+            <mat-label>{{ "Accounting.Rules.CreateRuleComponent.description" | translate }}</mat-label>
             <textarea matInput formControlName="description"></textarea>
           </mat-form-field>
 
@@ -106,8 +106,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!accountingRuleForm.valid" *midasHasPermission="'CREATE_ACCOUNTINGRULE'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!accountingRuleForm.valid" *midasHasPermission="'CREATE_ACCOUNTINGRULE'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
