--- a/src/app/accounting/accounting-rules/view-rule/view-rule.component.html
+++ b/src/app/accounting/accounting-rules/view-rule/view-rule.component.html
@@ -1,11 +1,11 @@
 <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_ACCOUNTINGRULE'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
   <button mat-raised-button color="warn" (click)="deleteAccountingRule()" *midasHasPermission="'DELETE_ACCOUNTINGRULE'">
     <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-    Delete
+    {{ "ShareButton.DeleteEng" | translate }}
   </button>
 </div>
 
@@ -20,7 +20,7 @@
         <div fxLayout="row wrap" class="content">
 
           <div fxFlex="50%" class="header">
-            Office
+            {{ "Accounting.Rules.EditRuleComponent.officeName" | translate }}
           </div>
 
           <div fxFlex="50%">
@@ -28,7 +28,7 @@
           </div>
 
           <div fxFlex="50%" class="header" *ngIf="accountingRule.description">
-            Description
+            {{ "Accounting.Rules.EditRuleComponent.description" | translate }}
           </div>
 
           <div fxFlex="50%" *ngIf="accountingRule.description">
@@ -36,7 +36,7 @@
           </div>
 
           <div fxFlex="50%" class="header">
-            Multiple Debit Entries Allowed
+            {{ "Accounting.Rules.EditRuleComponent.allowMultipleDebitEntries" | translate }}
           </div>
 
           <div fxFlex="50%">
@@ -44,7 +44,7 @@
           </div>
 
           <div fxFlex="50%" class="header">
-            Multiple Credit Entries Allowed
+            {{ "Accounting.Rules.EditRuleComponent.allowMultipleCreditEntries" | translate }}
           </div>
 
           <div fxFlex="50%">
@@ -69,7 +69,7 @@
 
           <div fxFlex="50%" fxLayout="column" *ngIf="accountingRule.debitTags">
             <div class="header">
-              Debit Tags
+              {{ "Accounting.Rules.EditRuleComponent.debitTags" | translate }}
             </div>
             <div *ngFor="let debitTag of accountingRule.debitTags">
               {{ debitTag.tag.name }}
@@ -78,7 +78,7 @@
 
           <div fxFlex="50%" fxLayout="column" *ngIf="accountingRule.debitAccounts">
             <div class="header">
-              Debit Account Name
+              {{ "Accounting.Rules.EditRuleComponent.debitAccounts" | translate }}
             </div>
             <div *ngFor="let debitAccount of accountingRule.debitAccounts">
               {{ debitAccount.name + ' (' + debitAccount.glCode + ')' }}
@@ -87,7 +87,7 @@
 
           <div fxFlex="50%" fxLayout="column" *ngIf="accountingRule.creditTags">
             <div class="header">
-              Credit Tags
+              {{ "Accounting.Rules.EditRuleComponent.creditTags" | translate }}
             </div>
             <div *ngFor="let creditTag of accountingRule.creditTags">
               {{ creditTag.tag.name }}
@@ -96,7 +96,7 @@
 
           <div fxFlex="50%" fxLayout="column" *ngIf="accountingRule.creditAccounts">
             <div class="header">
-              Credit Account Name
+              {{ "Accounting.Rules.EditRuleComponent.creditAccounts" | translate }}
             </div>
             <div *ngFor="let creditAccount of accountingRule.creditAccounts">
               {{ creditAccount.name + ' (' + creditAccount.glCode + ')' }}
