--- a/src/app/accounting/create-journal-entry/create-journal-entry.component.html
+++ b/src/app/accounting/create-journal-entry/create-journal-entry.component.html
@@ -9,26 +9,26 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.officeId" | translate }}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeData" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="journalEntryForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+              {{ "Accounting.CreateJournalEntryComponent.errofficeId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Currency</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.currencyCode" | translate }}</mat-label>
             <mat-select required formControlName="currencyCode">
               <mat-option *ngFor="let currency of currencyData" [value]="currency.code">
                 {{ currency.displayLabel }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="journalEntryForm.controls.currencyCode.hasError('required')">
-              Currency is <strong>required</strong>
+              {{ "Accounting.CreateJournalEntryComponent.errcurrencyCode" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -38,22 +38,22 @@
             <div fxFlexFill fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroupName]="i">
 
               <mat-form-field fxFlex="48%">
-                <mat-label>Affected GL Entry (Debit)</mat-label>
+                <mat-label>{{ "Accounting.CreateJournalEntryComponent.glAccountId" | translate }}</mat-label>
                 <mat-select required formControlName="glAccountId">
                   <mat-option *ngFor="let affectedGLEntryDebit of glAccountData" [value]="affectedGLEntryDebit.id">
                     {{ affectedGLEntryDebit.name + ' (' + affectedGLEntryDebit.glCode + ')' }}
                   </mat-option>
                 </mat-select>
                 <mat-error *ngIf="debits.at(i).controls.glAccountId.hasError('required')">
-                  Affected GL Entry (Debit) is <strong>required</strong>
+                  {{ "Accounting.CreateJournalEntryComponent.errglAccountId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
               <mat-form-field fxFlex="43%">
-                <mat-label>Debit Amount</mat-label>
+                <mat-label>{{ "Accounting.CreateJournalEntryComponent.amount" | translate }}</mat-label>
                 <input type="number" matInput required formControlName="amount">
                 <mat-error *ngIf="debits.at(i).controls.amount.hasError('required')">
-                  Debit Amount is <strong>required</strong>
+                  {{ "Accounting.CreateJournalEntryComponent.erramount" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
@@ -76,22 +76,22 @@
             <div fxFlexFill fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroupName]="i">
 
               <mat-form-field fxFlex="48%">
-                <mat-label>Affected GL Entry (Credit)</mat-label>
+                <mat-label>{{ "Accounting.CreateJournalEntryComponent.glAccountIdCredit" | translate }}</mat-label>
                 <mat-select required formControlName="glAccountId">
                   <mat-option *ngFor="let affectedGLEntryCredit of glAccountData" [value]="affectedGLEntryCredit.id">
                     {{ affectedGLEntryCredit.name + ' (' + affectedGLEntryCredit.glCode + ')' }}
                   </mat-option>
                 </mat-select>
                 <mat-error *ngIf="credits.at(i).controls.glAccountId.hasError('required')">
-                  Affected GL Entry (Credit) is <strong>required</strong>
+                  {{ "Accounting.CreateJournalEntryComponent.errglAccountIdCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
               <mat-form-field fxFlex="43%">
-                <mat-label>Credit Amount</mat-label>
+                <mat-label>{{ "Accounting.CreateJournalEntryComponent.amountCredit" | translate }}</mat-label>
                 <input type="number" matInput required formControlName="amount">
                 <mat-error *ngIf="credits.at(i).controls.amount.hasError('required')">
-                  Credit Amount is <strong>required</strong>
+                  {{ "Accounting.CreateJournalEntryComponent.erramountCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
@@ -109,22 +109,22 @@
           </div>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Reference Number</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.referenceNumber" | translate }}</mat-label>
             <input matInput formControlName="referenceNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Transaction Date</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.transactionDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="transactionDatePicker" required formControlName="transactionDate">
             <mat-datepicker-toggle matSuffix [for]="transactionDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #transactionDatePicker></mat-datepicker>
             <mat-error *ngIf="journalEntryForm.controls.transactionDate.hasError('required')">
-              Transaction Date is <strong>required</strong>
+              {{ "Accounting.CreateJournalEntryComponent.errtransactionDate" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Payment Type</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.paymentTypeId" | translate }}</mat-label>
             <mat-select formControlName="paymentTypeId">
               <mat-option *ngFor="let paymentType of paymentTypeData" [value]="paymentType.id">
                 {{ paymentType.name }}
@@ -133,32 +133,32 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Account Number</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.accountNumber" | translate }}</mat-label>
             <input matInput formControlName="accountNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Cheque Number</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.checkNumber" | translate }}</mat-label>
             <input matInput formControlName="checkNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Routing Code</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.routingCode" | translate }}</mat-label>
             <input matInput formControlName="routingCode">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Receipt Number</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.receiptNumber" | translate }}</mat-label>
             <input matInput formControlName="receiptNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Bank Number</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.bankNumber" | translate }}</mat-label>
             <input matInput formControlName="bankNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="98%">
-            <mat-label>Comments</mat-label>
+            <mat-label>{{ "Accounting.CreateJournalEntryComponent.comments" | translate }}</mat-label>
             <textarea matInput formControlName="comments"></textarea>
           </mat-form-field>
 
@@ -167,8 +167,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!journalEntryForm.valid" *midasHasPermission="'CREATE_JOURNALENTRY'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!journalEntryForm.valid" *midasHasPermission="'CREATE_JOURNALENTRY'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
