--- a/src/app/accounting/financial-activity-mappings/edit-financial-activity-mapping/edit-financial-activity-mapping.component.html
+++ b/src/app/accounting/financial-activity-mappings/edit-financial-activity-mapping/edit-financial-activity-mapping.component.html
@@ -9,7 +9,7 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Financial Activity</mat-label>
+            <mat-label>{{ "Accounting.FinancialActivityMappingsComponent.EditFinancialActivityMappingComponent.financialActivityId" | translate }}</mat-label>
             <mat-select required formControlName="financialActivityId">
               <mat-option *ngFor="let financialActivity of financialActivityData" [value]="financialActivity.id">
                 {{ financialActivity.name }}
@@ -18,7 +18,7 @@
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Account</mat-label>
+            <mat-label>{{ "Accounting.FinancialActivityMappingsComponent.EditFinancialActivityMappingComponent.glAccountId" | translate }}</mat-label>
             <mat-select required formControlName="glAccountId">
               <mat-option *ngFor="let glAccount of glAccountData" [value]="glAccount.id">
                 {{ glAccount.name + ' (' + glAccount.glCode + ')' }}
@@ -31,8 +31,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="financialActivityMappingForm.pristine" *midasHasPermission="'UPDATE_FINANCIALACTIVITYACCOUNT'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="financialActivityMappingForm.pristine" *midasHasPermission="'UPDATE_FINANCIALACTIVITYACCOUNT'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
