--- a/src/app/accounting/financial-activity-mappings/financial-activity-mappings.component.html
+++ b/src/app/accounting/financial-activity-mappings/financial-activity-mappings.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="end" class="container m-b-20">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_FINANCIALACTIVITYACCOUNT'">
-    <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Define New Mapping
+    <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ "Accounting.FinancialActivityMappingsComponent.defineNewMapping" | translate }}
   </button>
 </div>
 
@@ -9,17 +9,17 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="financialActivity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Financial Activity </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.FinancialActivityMappingsComponent.financialActivity" | translate }} </th>
       <td mat-cell *matCellDef="let financialActivityAccount"> {{ financialActivityAccount.financialActivityData.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="glAccountName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.FinancialActivityMappingsComponent.glAccountName" | translate }} </th>
       <td mat-cell *matCellDef="let financialActivityAccount"> {{ financialActivityAccount.glAccountData.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="glAccountCode">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Code </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.FinancialActivityMappingsComponent.glAccountCode" | translate }} </th>
       <td mat-cell *matCellDef="let financialActivityAccount"> {{ financialActivityAccount.glAccountData.glCode }} </td>
     </ng-container>
 
