--- a/src/app/accounting/frequent-postings/frequent-postings.component.html
+++ b/src/app/accounting/frequent-postings/frequent-postings.component.html
@@ -9,38 +9,38 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.officeId" | translate }}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeData" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="frequentPostingsForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+              {{ "Accounting.FrequentPostingsComponent.errofficeId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Accounting Rule</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.accountingRule" | translate }}</mat-label>
             <mat-select required formControlName="accountingRule">
               <mat-option *ngFor="let accountingRule of accountingRuleData" [value]="accountingRule">
                 {{ accountingRule.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="frequentPostingsForm.controls.accountingRule.hasError('required')">
-              Accounting Rule is <strong>required</strong>
+              {{ "Accounting.FrequentPostingsComponent.erraccountingRule" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Currency</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.currencyCode" | translate }}</mat-label>
             <mat-select required formControlName="currencyCode">
               <mat-option *ngFor="let currency of currencyData" [value]="currency.code">
                 {{ currency.displayLabel }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="frequentPostingsForm.controls.currencyCode.hasError('required')">
-              Currency is <strong>required</strong>
+              {{ "Accounting.FrequentPostingsComponent.errcurrencyCode" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -52,22 +52,22 @@
             <div fxFlexFill fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroupName]="i">
 
               <mat-form-field fxFlex="48%">
-                <mat-label>Affected GL Entry (Debit)</mat-label>
+                <mat-label>{{ "Accounting.FrequentPostingsComponent.glAccountId" | translate }}</mat-label>
                 <mat-select required formControlName="glAccountId">
                   <mat-option *ngFor="let affectedGLEntryDebit of debitAccountData" [value]="affectedGLEntryDebit.id">
                     {{ affectedGLEntryDebit.name }}
                   </mat-option>
                 </mat-select>
                 <mat-error *ngIf="debits.at(i).controls.glAccountId.hasError('required')">
-                  Affected GL Entry (Debit) is <strong>required</strong>
+                  {{ "Accounting.FrequentPostingsComponent.errglAccountId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
               <mat-form-field fxFlex="43%">
-                <mat-label>Debit Amount</mat-label>
+                <mat-label>{{ "Accounting.FrequentPostingsComponent.amountDebit" | translate }}</mat-label>
                 <input currencyMask type="text" matInput required formControlName="amount">
                 <mat-error *ngIf="debits.at(i).controls.amount.hasError('required')">
-                  Debit Amount is <strong>required</strong>
+                  {{ "Accounting.FrequentPostingsComponent.erramountDebit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
@@ -90,22 +90,22 @@
             <div fxFlexFill fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroupName]="i">
 
               <mat-form-field fxFlex="48%">
-                <mat-label>Affected GL Entry (Credit)</mat-label>
+                <mat-label>{{ "Accounting.FrequentPostingsComponent.glAccountIdCredit" | translate }}</mat-label>
                 <mat-select required formControlName="glAccountId">
                   <mat-option *ngFor="let affectedGLEntryCredit of creditAccountData" [value]="affectedGLEntryCredit.id">
                     {{ affectedGLEntryCredit.name }}
                   </mat-option>
                 </mat-select>
                 <mat-error *ngIf="credits.at(i).controls.glAccountId.hasError('required')">
-                  Affected GL Entry (Credit) is <strong>required</strong>
+                  {{ "Accounting.FrequentPostingsComponent.errglAccountIdCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
               <mat-form-field fxFlex="43%">
-                <mat-label>Credit Amount</mat-label>
+                <mat-label>{{ "Accounting.FrequentPostingsComponent.amountCredit" | translate }}</mat-label>
                 <input currencyMask type="text" matInput required formControlName="amount">
                 <mat-error *ngIf="credits.at(i).controls.amount.hasError('required')">
-                  Credit Amount is <strong>required</strong>
+                  {{ "Accounting.FrequentPostingsComponent.erramountCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
@@ -123,22 +123,22 @@
           </div>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Reference Number</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.referenceNumber" | translate }}</mat-label>
             <input matInput formControlName="referenceNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Transaction Date</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.transactionDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="transactionDatePicker" required formControlName="transactionDate">
             <mat-datepicker-toggle matSuffix [for]="transactionDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #transactionDatePicker></mat-datepicker>
             <mat-error *ngIf="frequentPostingsForm.controls.transactionDate.hasError('required')">
-              Transaction Date is <strong>required</strong>
+              {{ "Accounting.FrequentPostingsComponent.errtransactionDate" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Payment Type</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.paymentTypeId" | translate }}</mat-label>
             <mat-select formControlName="paymentTypeId">
               <mat-option *ngFor="let paymentType of paymentTypeData" [value]="paymentType.id">
                 {{ paymentType.name }}
@@ -147,32 +147,32 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Account Number</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.accountNumber" | translate }}</mat-label>
             <input matInput formControlName="accountNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Cheque Number</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.checkNumber" | translate }}</mat-label>
             <input matInput formControlName="checkNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Routing Code</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.routingCode" | translate }}</mat-label>
             <input matInput formControlName="routingCode">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Receipt Number</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.receiptNumber" | translate }}</mat-label>
             <input matInput formControlName="receiptNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Bank Number</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.bankNumber" | translate }}</mat-label>
             <input matInput formControlName="bankNumber">
           </mat-form-field>
 
           <mat-form-field fxFlex="98%">
-            <mat-label>Comments</mat-label>
+            <mat-label>{{ "Accounting.FrequentPostingsComponent.comments" | translate }}</mat-label>
             <textarea matInput formControlName="comments"></textarea>
           </mat-form-field>
 
@@ -181,8 +181,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!frequentPostingsForm.valid" *midasHasPermission="'CREATE_JOURNALENTRY'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!frequentPostingsForm.valid" *midasHasPermission="'CREATE_JOURNALENTRY'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
