--- a/src/app/accounting/migrate-opening-balances/migrate-opening-balances.component.html
+++ b/src/app/accounting/migrate-opening-balances/migrate-opening-balances.component.html
@@ -10,14 +10,14 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="88%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{ "Accounting.MigrateOpeningBalancesComponent.officeId" | translate }}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeData" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="openingBalancesForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+              {{ "Accounting.MigrateOpeningBalancesComponent.errofficeId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -30,47 +30,47 @@
           <label fxFlex="98%" class="content"><span class="header">Opening Balances Contra Account:</span>&nbsp;&nbsp;{{ openingBalancesData.contraAccount.name + ' (' + openingBalancesData.contraAccount.glCode + ')' }}</label>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Currency</mat-label>
+            <mat-label>{{ "Accounting.MigrateOpeningBalancesComponent.currencyCode" | translate }}</mat-label>
             <mat-select required formControlName="currencyCode">
               <mat-option *ngFor="let currency of currencyData" [value]="currency.code">
                 {{ currency.displayLabel }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="openingBalancesForm.controls.currencyCode.hasError('required')">
-              Currency is <strong>required</strong>
+              {{ "Accounting.MigrateOpeningBalancesComponent.errcurrencyCode" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Opening Balances Date</mat-label>
+            <mat-label>{{ "Accounting.MigrateOpeningBalancesComponent.transactionDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="openingBalancesDatePicker" required formControlName="transactionDate">
             <mat-datepicker-toggle matSuffix [for]="openingBalancesDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #openingBalancesDatePicker></mat-datepicker>
             <mat-error *ngIf="openingBalancesForm.controls.transactionDate.hasError('required')">
-              Opening Balances Date is <strong>required</strong>
+              {{ "Accounting.MigrateOpeningBalancesComponent.errtransactionDate" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" class="content" fxFlex="100%">
 
             <div class="header" fxFlex="8%">
-              Type
+              {{ "Accounting.MigrateOpeningBalancesComponent.Type" | translate }}
             </div>
 
             <div class="header" fxFlex="18%">
-              GL Code
+              {{ "Accounting.MigrateOpeningBalancesComponent.GLCode" | translate }}
             </div>
 
             <div class="header" fxFlex="18%">
-              Account
+              {{ "Accounting.MigrateOpeningBalancesComponent.Account" | translate }}
             </div>
 
             <div class="header" fxFlex="23%">
-              Total Debit: {{ debitsSum | money }}
+              {{ "Accounting.MigrateOpeningBalancesComponent.TotalDebit" | translate }}{{ debitsSum | money }}
             </div>
 
             <div class="header" fxFlex="23%">
-              Total Credit: {{ creditsSum | money }}
+              {{ "Accounting.MigrateOpeningBalancesComponent.TotalCredit" | translate }}{{ debitsSum | money }}{{ creditsSum | money }}
             </div>
 
           </div>
@@ -94,14 +94,14 @@
 
               <div fxFlex="23%">
                 <mat-form-field>
-                  <mat-label>Debit</mat-label>
+                  <mat-label>{{ "Accounting.MigrateOpeningBalancesComponent.debit" | translate }}</mat-label>
                   <input matInput type="number" formControlName="debit">
                 </mat-form-field>
               </div>
 
               <div fxFlex="23%">
                 <mat-form-field>
-                  <mat-label>Credit</mat-label>
+                  <mat-label>{{ "Accounting.MigrateOpeningBalancesComponent.credit" | translate }}</mat-label>
                   <input matInput type="number" formControlName="credit">
                 </mat-form-field>
               </div>
@@ -115,8 +115,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px" *ngIf="openingBalancesData">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!openingBalancesForm.valid" *midasHasPermission="'DEFINEOPENINGBALANCE_JOURNALENTRY'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!openingBalancesForm.valid" *midasHasPermission="'DEFINEOPENINGBALANCE_JOURNALENTRY'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
