--- a/src/app/accounting/view-journal-entry/view-journal-entry.component.html
+++ b/src/app/accounting/view-journal-entry/view-journal-entry.component.html
@@ -1,48 +1,48 @@
-<h1 mat-dialog-title>View Journal Entry</h1>
+<h1 mat-dialog-title>{{ "Accounting.ViewJournalEntryComponent.h1" | translate }}</h1>
 
 <div mat-dialog-content>
 
   <table>
 
     <tr>
-      <th>Office</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.officeName" | translate }}</th>
       <td>{{ data.journalEntry.officeName }}</td>
     </tr>
 
     <tr>
-      <th>Entry ID</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.id" | translate }}</th>
       <td>{{ data.journalEntry.id }}</td>
     </tr>
 
     <tr>
-      <th>Transaction ID</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.transactionId" | translate }}</th>
       <td>{{ data.journalEntry.transactionId }}</td>
     </tr>
 
     <tr>
-      <th>Transaction Date</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.transactionDate" | translate }}</th>
       <td>{{ data.journalEntry.transactionDate }}</td>
     </tr>
 
     <tr>
-      <th>Type</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.glAccountType" | translate }}</th>
       <td>{{ data.journalEntry.glAccountType.value }}</td>
     </tr>
 
     <tr>
-      <th>Account Code</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.glAccountId" | translate }}</th>
       <td>{{ data.journalEntry.glAccountId }}</td>
     </tr>
 
     <tr>
-      <th>Account Name</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.glAccountName" | translate }}</th>
       <td>{{ data.journalEntry.glAccountName }}</td>
     </tr>
 
     <tr>
       <th>
-        <span *ngIf="data.journalEntry.entryType.value === 'CREDIT'">Credit</span>
-        <span *ngIf="data.journalEntry.entryType.value === 'DEBIT'">Debit</span>
+        <span *ngIf="data.journalEntry.entryType.value === 'CREDIT'">{{ "Accounting.ViewJournalEntryComponent.Credit" | translate }}</span>
+        <span *ngIf="data.journalEntry.entryType.value === 'DEBIT'">{{ "Accounting.ViewJournalEntryComponent.Debit" | translate }}</span>
       </th>
       <td>
         {{ (data.journalEntry.currency.displaySymbol || data.journalEntry.currency.code) + ' ' + data.journalEntry.amount }}
@@ -50,56 +50,56 @@
     </tr>
 
     <tr *ngIf="data.journalEntry.referenceNumber">
-      <th>Reference Number</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.referenceNumber" | translate }}</th>
       <td>{{ data.journalEntry.referenceNumber }}</td>
     </tr>
 
     <tr *ngIf="data.journalEntry.comments">
-      <th>Comments</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.comments" | translate }}</th>
       <td>{{ data.journalEntry.comments }}</td>
     </tr>
 
     <tr *ngIf="data.journalEntry.transactionDetails.paymentDetails">
-      <th colspan="2" class="header">Payment Details</th>
+      <th colspan="2" class="header">{{ "Accounting.ViewJournalEntryComponent.paymentDetails" | translate }}</th>
     </tr>
 
     <tr *ngIf="data.journalEntry.transactionDetails.paymentDetails?.paymentType">
-      <th>Payment Type</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.paymentType" | translate }}</th>
       <td>{{ data.journalEntry.transactionDetails.paymentDetails.paymentType.name }}</td>
     </tr>
 
     <tr *ngIf="data.journalEntry.transactionDetails.paymentDetails?.accountNumber">
-      <th>Account Number</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.accountNumber" | translate }}</th>
       <td>{{ data.journalEntry.transactionDetails.paymentDetails.accountNumber }}</td>
     </tr>
 
     <tr *ngIf="data.journalEntry.transactionDetails.paymentDetails?.checkNumber">
-      <th>Cheque Number</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.checkNumber" | translate }}</th>
       <td>{{ data.journalEntry.transactionDetails.paymentDetails.checkNumber }}</td>
     </tr>
 
     <tr *ngIf="data.journalEntry.transactionDetails.paymentDetails?.routingCode">
-      <th>Routing Code</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.routingCode" | translate }}</th>
       <td>{{ data.journalEntry.transactionDetails.paymentDetails.routingCode }}</td>
     </tr>
 
     <tr *ngIf="data.journalEntry.transactionDetails.paymentDetails?.receiptNumber">
-      <th>Receipt Number</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.receiptNumber" | translate }}</th>
       <td>{{ data.journalEntry.transactionDetails.paymentDetails.receiptNumber }}</td>
     </tr>
 
     <tr *ngIf="data.journalEntry.transactionDetails.paymentDetails?.bankNumber">
-      <th>Bank Number</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.bankNumber" | translate }}</th>
       <td>{{ data.journalEntry.transactionDetails.paymentDetails.bankNumber }}</td>
     </tr>
 
     <tr>
-      <th>Created by</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.createdByUserName" | translate }}</th>
       <td>{{ data.journalEntry.createdByUserName }}</td>
     </tr>
 
     <tr>
-      <th>Created on</th>
+      <th>{{ "Accounting.ViewJournalEntryComponent.createdDate" | translate }}</th>
       <td>{{ data.journalEntry.createdDate }}</td>
     </tr>
 
@@ -108,5 +108,5 @@
 </div>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Close</button>
+  <button mat-button mat-dialog-close>{{ "ShareButton.CloseEng" | translate }}</button>
 </mat-dialog-actions>
