--- a/src/app/accounting/view-transaction/view-transaction.component.html
+++ b/src/app/accounting/view-transaction/view-transaction.component.html
@@ -2,9 +2,9 @@
   <button mat-raised-button color="primary" (click)="revertTransaction()" *midasHasPermission="'REVERSE_JOURNALENTRY'" [disabled]="dataSource?.data[0].reversed">
     <span *ngIf="!dataSource.data[0].reversed">
       <fa-icon icon="undo"></fa-icon>&nbsp;&nbsp;
-      Revert Transaction
+      {{ "Accounting.ViewTransactionComponent.spanRevertTransaction" | translate }}
     </span>
-    <span *ngIf="dataSource.data[0].reversed">Transaction Reverted</span>
+    <span *ngIf="dataSource.data[0].reversed">{{ "Accounting.ViewTransactionComponent.spanTransactionReverted" | translate }}</span>
   </button>
 </div>
 
@@ -17,7 +17,7 @@
         <div fxLayout="row wrap" class="content">
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Office
+            {{ "Accounting.ViewTransactionComponent.officeName" | translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -25,7 +25,7 @@
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Transaction Date
+            {{ "Accounting.ViewTransactionComponent.transactionDate" | translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -33,7 +33,7 @@
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Created By
+            {{ "Accounting.ViewTransactionComponent.createdByUserName" | translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -41,7 +41,7 @@
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Created On
+            {{ "Accounting.ViewTransactionComponent.createdDate" | translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -61,32 +61,32 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Entry ID </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ViewTransactionComponent.table.id" | translate }} </th>
       <td mat-cell *matCellDef="let transaction"> {{ transaction.id }} </td>
     </ng-container>
 
     <ng-container matColumnDef="glAccountType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ViewTransactionComponent.table.glAccountType" | translate }} </th>
       <td mat-cell *matCellDef="let transaction"> {{ transaction.glAccountType.value }} </td>
     </ng-container>
 
     <ng-container matColumnDef="glAccountCode">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Code </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ViewTransactionComponent.table.glAccountCode" | translate }} </th>
       <td mat-cell *matCellDef="let transaction"> {{ transaction.glAccountCode }} </td>
     </ng-container>
 
     <ng-container matColumnDef="glAccountName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ViewTransactionComponent.table.glAccountName" | translate }} </th>
       <td mat-cell *matCellDef="let transaction"> {{ transaction.glAccountName }} </td>
     </ng-container>
 
     <ng-container matColumnDef="debit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Debit </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ViewTransactionComponent.table.debit" | translate }} </th>
       <td mat-cell *matCellDef="let transaction"><span *ngIf="transaction.entryType.value === 'DEBIT'"> {{ (transaction.currency.displaySymbol || transaction.currency.code) + ' ' + transaction.amount }} </span></td>
     </ng-container>
 
     <ng-container matColumnDef="credit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Credit </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ViewTransactionComponent.table.credit" | translate }} </th>
       <td mat-cell *matCellDef="let transaction"><span *ngIf="transaction.entryType.value === 'CREDIT'"> {{ (transaction.currency.displaySymbol || transaction.currency.code) + ' ' + transaction.amount }} </span></td>
     </ng-container>
 
